# pyrol

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  ROL.i  ROLObjective.h  ROLVector.h  bitbucket-pipelines.yml  pyproject.toml  setup.py  test.py
.github/workflows/: build.yml  package.yml
ROL/: NPBasedLA.py  ROL.cpp  __init__.py  algorithm.cpp  algorithmstate.cpp  augmentedlagrangian.cpp  bounds.cpp  constraint.cpp  descent.cpp  dolfin_LA.py  dolfin_vector.py  firedrake_vector.py  linesearchstep.cpp  moreauyosidapenalty.cpp  numpy_vector.py  objective.cpp  optimizationproblem.cpp  optimizationsolver.cpp  parameterlist.cpp  problem.cpp  py_shared_ptr.hpp  secant.cpp  solver.cpp  statustest.cpp  stdvector.cpp  step.cpp  vector.cpp  vector.hpp
docker/: Dockerfile  build-image.sh  push-image.sh
docs/: Makefile  api.rst  conf.py  constraints.rst  index.rst  installation.rst  intro.rst  make.bat  objectives.rst  vectors.rst
examples/elasticity_topology_optimization/: elasticity_topology_optimization.py  input.xml
examples/firedrake_motherproblem/: firedrake_LA.py  firedrake_motherproblem.py
examples/motherproblem/: dolfin_LA.py  firedrake_LA.py  motherproblem.py  motherproblem.py.rst
examples/stokes_topology_optimization/: dolfin_LA.py  input.xml  stokes_topology_optimization.py  stokes_topology_optimization.py.rst
pybind11/: .gitignore  CMakeLists.txt  CustomLA.h  EigenVector.h  PyEqualityConstraint.h  PyObjective.h  README.md  ROL.cpp  py_CustomLA.py  py_EigenVector.py  py_Firedrake.py  py_StdVector.py  py_dolfin.py  pybind_test.py  test.py
pybind11/test/: test_CustomLA.py  test_std_vector.py
src/: CMakeLists.txt  CustomLA.h  README.md  ROL.cpp  py_EigenVector.py  py_StdVector.py  py_dolfin.py  pybind_test.py  setup.py
src/ROL/: CustomLA.h  PyBoundConstraint.h  PyBounds.h  PyConstraint.h  PyObjective.h  PyVector.h  ROL.cpp  __init__.py  algorithm.cpp  algorithmstate.cpp  augmentedlagrangian.cpp  bounds.cpp  dolfin_LA.py  moreauyosidapenalty.cpp  objective.cpp  optimizationproblem.cpp  optimizationsolver.cpp  parameterlist.cpp  stdvector.cpp  vector.cpp
src/ROLUtils/: NPBasedLA.py  dolfin_LA.py
swig/: CMakeLists.txt  Makefile  ROL.i  ROLObjective.h  test.py
tests/: has_filesystem.cc  test_CustomLA.py  test_dolfinLA.py  test_dolfin_vector.py  test_hs.py  test_numpy_vector.py  test_optimizationproblem.py  test_std_vector.py
tests/hs/: hs13.py  hs28.py  hs29.py  hs4.py
tools/: build_boost.sh  build_openblas.sh
