[project]
name = "pyroltrilinos"
version = "0.5.0"
description = "A Python wrapper for the ROL package"
authors = [
  {name = "Chris Richardson"},
  {name = "Greg von Winckel"},
  {name = "Florian Wechsung"},
  {name = "Angus Gibson"},
]
maintainers = [
  {name = "Angus Gibson"}
]
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Programming Language :: Python :: 3",
]
readme = "README.md"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ["x86_64"]
skip = "cp36-*"
build-frontend = "build"
manylinux-x86_64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"

[tool.cibuildwheel.linux]
before-all = "yum install -y openblas-devel boost-devel"
environment = {"CMAKE_ARGS" = "-DTPL_BLAS_LIBRARIES=/usr/lib64/libopenblas.so -DTPL_LAPACK_LIBRARIES=/usr/lib64/libopenblas.so"}

[tool.cibuildwheel.macos]
before-all = "sh tools/build_openblas.sh"
before-build = "sh tools/build_boost.sh"
environment = {"FC" = "gfortran-13", "CC" = "gcc-13", "CXX" = "g++-13"}

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add openblas-dev boost-dev"
environment = {"CMAKE_ARGS" = "-DTPL_BLAS_LIBRARIES=/usr/lib/libopenblas.so -DTPL_LAPACK_LIBRARIES=/usr/lib/libopenblas.so"}
